--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://kit.fontawesome.com/062a3f5fa7.js" crossorigin="anonymous"></script>
     <script src="./assets/js/menusm.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="./assets/js/animations.js"></script>
 </head>
 <body>
 
@@ -352,10 +353,15 @@
     </div>
 
     <div class="row contadores">
+
         <div class="col-3-md iconservice "><i class="fas fa-star white fonticon3rem"></i>
-            <div class="number-contadores">4</div>
+
+            <div class="color_fondo" id="fondo_color">
+                <div class="numero" id="numero"> 00</div>
+            </div>
             <div class= "text-contadores">Clientes Satisfechos</div> 
         </div>
+
         <div class="col-3-md iconservice"><i class="fas fa-mug-hot white fonticon3rem"></i>
             <div class="number-contadores">365</div>
             <div class= "text-contadores">Tazas de cafe</div> 
